Add section projects responsive

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <p class="projects__list--body--bio">In my <span>journey</span> through the ever-evolving world of <span>web development</span>, I've <span>crafted</span> a myriad of <span>projects</span> that fill me with <span>pride</span>. Dive in and <span>explore my creations</span>. If my work speaks to you, I welcome your curiosity—reach out and <span>let's make something amazing together</span>.</p>                    
 
                 <label id="label_1" for="project1">Fallout S.P.E.C.I.A.L</label>
-                <input id="input_1" type="radio" name="project" value="project1" checked>
+                <input id="input_1" type="radio" name="project" value="project1">
                 <div class="project__image">
                     <img src="/img/fallout_specials.jpg" alt="">
                 </div>
@@ -282,7 +282,9 @@
                         <span class="project__tags--item">REACT</span>
 
                     </div>
-                    <p class="project__description">Relive the iconic Call of Duty: Black Ops experience with this faithful reproduction of the menu. Navigate through the familiar interface, reminisce about the thrilling missions, and immerse yourself in the nostalgia of this classic game right from your browser.</p>
+                    <p class="project__description">
+                        Step back in time with this faithful recreation of the Call of Duty: Black Ops 1 menu. Experience the nostalgia, and immerse yourself in the menu of this classic game right from your browser.
+                    </p>
                     <div class="project__links">
                         <a href="" target="_blank">
                             Github 
@@ -303,9 +305,9 @@
                     </div>
                 </div>
 
-                </div>
             </div>
       
+            
         </main> 
 
     </body>
